<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Humanity Connect</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="copyright" tools:ignore="Typos">© 2017 Momento Inc.</string>
    <string name="title_activity_login">Sign In</string>
    <string name="already_registered">Already have an account? Log in</string>
    <string name="create_account">Create Account</string>
    <string name="journal">My Journal</string>
    <string name="encouragement_board">Encouragement Board</string>
    <string name="photo_album">Photo Album</string>
    <string name="create_family_account">Create Family Account</string>
    <string name="invite_people">Invite People</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About Humanity Hospice</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_private_access_code">My Private Access Code:</string>
    <string name="private_access_url">My Private Access Web URL:</string>
    <string name="share_code">Share My Code</string>
    <string name="share_web_url">Share My Web URL</string>
    <string name="enter_patient_code">Enter The Patients Access Code:</string>
    <string name="private_access_code">Private Access Code</string>
    <string name="write_post">New Post</string>
    <string name="post_hint">New Post&#x2026;</string>
    <string name="post">Post</string>
    <string name="posted_in_board">sent you encouragement</string>
    <string name="reader_journal">Journal</string>
    <string name="reader_photo_album">Photo Album</string>
    <string name="add_patient">Add Patient</string>
    <string name="change_patient">Change Patient</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="patient">Patient</string>
    <string name="reader">Reader</string>
    <string name="patient_url">https://www.HPPatientPortal.com/John-Smith/583693</string>
    <string name="x">x</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="add_comment">Add Comment...</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_post">Post</string>
    <string name="current_readers">Current Readers</string>
    <string name="patient_error">Error reading from current Patient, please change patients to view posts.</string>
    <string name="call_nurse">Call Nurse</string>
    <string name="agree">I Agree</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="send">Send</string>
    <string name="compose">Compose</string>
</resources>
