<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:srcCompat="@mipmap/logo" />

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColorLink="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColorLink="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColorLink="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/reenterPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/verify_password"
            android:inputType="textPassword"
            android:textColorLink="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            tools:ignore="UnusedAttribute" />

        <RadioGroup
            android:id="@+id/accountTypeSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checkedButton="@+id/patientButton">

            <RadioButton
                android:id="@+id/patientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/patient"
                android:buttonTint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />

            <RadioButton
                android:id="@+id/friendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/reader"
                tools:ignore="UnusedAttribute" />
        </RadioGroup>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:background="@drawable/rounded_button"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/already_registered" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>