<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:contentDescription="@string/app_name"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@mipmap/white_logo" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@mipmap/textbox"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:textColorLink="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@mipmap/textbox"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:textColorLink="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resetPasswordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/createAccountView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/create_new_account"
            android:textColor="@android:color/white" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>