<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <LinearLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/primaryWhite"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/create_family_account"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

            </android.support.v7.widget.Toolbar>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:srcCompat="@mipmap/logo" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textCapSentences|textPersonName"
                android:singleLine="true"
                android:textCursorDrawable="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textCapSentences|textPersonName"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />

            <EditText
                android:id="@+id/reenterPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/verify_password"
                android:inputType="textPassword"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header_home"/>

</android.support.v4.widget.DrawerLayout>