<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WritePostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/closeButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginEnd="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/rounded_button"
                android:text="@string/x"
                android:textColor="@color/primaryWhite" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/primaryWhite"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/write_post"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

            </android.support.v7.widget.Toolbar>

            <Button
                android:id="@+id/writePostButton"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button"
                android:text="@string/post"
                android:textColor="@color/primaryWhite"
                android:textSize="16sp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@mipmap/about" />

                <EditText
                    android:id="@+id/postEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/post_hint"
                    android:inputType="textMultiLine"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimary"
                    android:textCursorDrawable="@color/colorPrimary"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2" />

                <ImageView
                    android:id="@+id/postImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight=".2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/choosePhotoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight=".5"
                android:background="@drawable/rounded_button"
                android:text="@string/choose_picture"
                android:textColor="@color/primaryWhite" />

            <Button
                android:id="@+id/takePhotoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight=".5"
                android:background="@drawable/rounded_button"
                android:text="@string/take_picture"
                android:textColor="@color/primaryWhite" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>